force-app/main/default/objects/NSSTeamMap__c/NSSTeamMap__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>NSS Team Map</label>
</CustomObject>