force-app/main/default/objects/NSSTeamMap__c/fields/AllowSwitchReferralRole__c.field-meta.xml
<CustomField>
    <fullName>AllowSwitchReferralRole__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>In the Referral Controller page, is the user allowed to switch their role? Ex: from Inbound to Outbound</inlineHelpText>
    <label>Allow Switch Referral Role?</label>
    <type>Checkbox</type>
</CustomField>