force-app/main/default/objects/NSSTeamMap__c/fields/Available_Queues__c.field-meta.xml
<CustomField>
    <fullName>Available_Queues__c</fullName>
    <description>For the RecordReassignment Component, what queues are available for selection</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Available Queues</label>
    <type>TextArea</type>
</CustomField>