force-app/main/default/objects/NSSTeamMap__c/fields/LeadRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>LeadRecordTypeName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the record type associated with this product</inlineHelpText>
    <label>Lead Record Type Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>