force-app/main/default/objects/NSSTeamMap__c/fields/NSSSource__c.field-meta.xml
<CustomField>
    <fullName>NSSSource__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If this NSS Team is directly related to an NSS Source, the name of the source goes here.</inlineHelpText>
    <label>NSS Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>