force-app/main/default/objects/NSSTeamMap__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>The product with the highest priority is the &quot;main&quot; record to use for the ownership. The lower the number the higher the priority - 0 is the highest. Since there are only three groups, valid values are 0-2. Anything else will be ignored.</inlineHelpText>
    <label>Priority</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>