force-app/main/default/objects/NSSTeamMap__c/fields/ReferralPartnerType__c.field-meta.xml
<CustomField>
    <fullName>ReferralPartnerType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the referral partner type for this NSS Team value?</inlineHelpText>
    <label>Referral Partner Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>