force-app/main/default/objects/NSSTeamMap__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LeadRecordTypeName__c</columns>
    <columns>Priority__c</columns>
    <columns>IsPayroll__c</columns>
    <columns>AlwaysUse__c</columns>
    <columns>CreateOwnership__c</columns>
    <columns>NSSSource__c</columns>
    <columns>UseForOwnership__c</columns>
    <columns>CreatePartnerReferral__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>ReferralPartnerType__c</columns>
    <columns>AllowSwitchReferralRole__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>